syntax = "proto3";

option java_package = "com.voidDeveloper.wastatussaver.data.datastore.proto";
option java_multiple_files = true;

enum MediaType {
  UNSPECIFIED = 0;
  IMAGE = 1;
  VIDEO = 2;
  AUDIO = 3;
}

message StatusMedia {
  string uri = 1;
  string file_name = 2;
  MediaType media_type = 3;
}

message StatusMediaList {
  repeated StatusMedia items = 1;
}